Closed Bug 337412 Opened 19 years ago Closed 18 years ago

"ASSERTION: NS_BLOCK_FRAME_HAS_OUTSIDE_BULLET flag set and no mBullet" leaving page with list item split across columns

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: MatsPalmgren_bugz)

References

Details

(Keywords: assertion, testcase)

Attachments

(3 files)

###!!! ASSERTION: NS_BLOCK_FRAME_HAS_OUTSIDE_BULLET flag set and no mBullet: 'mBullet', file /Users/admin/trunk/mozilla/layout/generic/nsBlockFrame.h, line 298
Still happens on trunk.
Assignee: nobody → mats.palmgren
OS: Mac OS X 10.4 → All
Hardware: Macintosh → All
Attached file Frame dump
Attached patch Patch rev. 1Splinter Review
Don't propagate the NS_BLOCK_FRAME_HAS_OUTSIDE_BULLET flag from a prev-in-flow.
Attachment #231222 - Flags: superreview?(roc)
Attachment #231222 - Flags: review?(roc)
Blocks: 346405
Attachment #231222 - Flags: superreview?(roc)
Attachment #231222 - Flags: superreview+
Attachment #231222 - Flags: review?(roc)
Attachment #231222 - Flags: review+
Checked in to trunk at 2006-08-05 20:27 PDT -> FIXED
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Crashtest checked in.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: