Don't propagate the NS_BLOCK_FRAME_HAS_OUTSIDE_BULLET flag from a prev-in-flow. b=337412 r+sr=roc